<resources>
    <string name="app_name">Business Assistant</string>
    <string name="login_title">SUPERMARKET</string>
    <string name="login_subtitle_1">Business Assistant</string>
    <string name="login_subtitle_2">Asistente de negocio en supermercados</string>
    <string name="hint_email">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="action_login">Ingresar</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="desc_toggle_theme">Cambiar tema</string>
    <string name="desc_logo">Carrito</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_users">Usuarios</string>
    <string name="nav_categories">Categorías</string>
    <string name="nav_products">Productos</string>
    <string name="nav_sales">Ventas</string>
    <string name="nav_reports">Reportes</string>
    <string name="nav_logout">Cerrar Sesión</string>
    <string name="menu">Menú</string>
    <string name="mode_toggle">Cambiar modo</string>

    <!-- Usuarios -->
    <string name="users_title">Usuarios</string>
    <string name="users_add">Agregar Usuario</string>

    <!-- Acordeón / detalle -->
    <string name="user_id_label">ID:</string>
    <string name="user_name_label">Nombre:</string>
    <string name="user_email_label">Email:</string>
    <string name="user_role_label">Rol:</string>
    <string name="actions_label">Acciones:</string>

    <!-- Acciones -->
    <string name="view_user">Ver usuario</string>
    <string name="user_edit">Editar usuario</string>
    <string name="user_delete">Eliminar usuario</string>

    <!-- Form -->
    <string name="user_info">Información del Usuario</string>
    <string name="user_name">Nombre</string>
    <string name="user_email">Email</string>
    <string name="user_role">Rol</string>
    <string name="password">Contraseña</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>

    <string name="delete">Eliminar</string>
    <string name="confirm_delete">¿Estás seguro de que deseas eliminar este usuario?</string>
    <string name="edit">Editar</string>
    <string name="ok">OK</string>
    <string name="deleted_success">Usuario eliminado correctamente</string>
    <string name="fill_all_fields">Debes completar todos los campos</string>
    <string name="must_enter_password">Debes ingresar una contraseña</string>

</resources>