<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/nav_users"
        android:title="@string/nav_users"
        android:icon="@drawable/ic_users" />

    <item
        android:id="@+id/nav_categories"
        android:title="@string/nav_categories"
        android:icon="@drawable/ic_categories" />

    <item
        android:id="@+id/nav_products"
        android:title="@string/nav_products"
        android:icon="@drawable/ic_products" />

    <item
        android:id="@+id/nav_sales"
        android:title="@string/nav_sales"
        android:icon="@drawable/ic_sales" />

    <item
        android:id="@+id/nav_reports"
        android:title="@string/nav_reports"
        android:icon="@drawable/ic_reports" />

    <item
        android:id="@+id/nav_logout"
        android:title="@string/nav_logout"
        android:icon="@drawable/ic_logout" />

</menu>
